--- a/front-end/lucienstore/src/App.css
+++ b/front-end/lucienstore/src/App.css
@@ -10,6 +10,25 @@
   background-color: #DCDCDC; /* Replace with your desired shade of gray */
 }
 
+.categories-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.categories-list li {
+  margin-right: 10px;
+  padding: 5px 10px;
+  background-color: #ccc;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.categories-list li:hover {
+  background-color: #999;
+}
 /* .App {
   text-align: center;
 }
