--- a/front-end/lucienstore/src/App.css
+++ b/front-end/lucienstore/src/App.css
@@ -29,41 +29,18 @@
 .categories-list li:hover {
   background-color: rgb(103, 162, 196);
 }
-/* .App {
-  text-align: center;
+
+.product-list {
+  width: 84%;
+  display: flex; 
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  /* align-items: center;  */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap; /* Wrap the content if there's not enough space horizontally */
+  justify-content: flex-start; /* Start the content from the left side of the container */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
