--- a/front-end/lucienstore/src/components/OptionList/OptionsList.css
+++ b/front-end/lucienstore/src/components/OptionList/OptionsList.css
@@ -8,7 +8,7 @@
 .options-list h2 {
   margin-top: 0;
   margin-bottom: 10px;
-  font-size: 22px;
+  font-size: 24px;
   color: rgb(9, 111, 170);
 }
 
@@ -25,6 +25,8 @@
   cursor: pointer;
   color: rgb(9, 111, 170);
   font-size: 20px;
+  font-weight: bold;
+
 }
 
 .options-list li:hover {
