--- a/front-end/lucienstore/src/components/OptionList/OptionsList.css
+++ b/front-end/lucienstore/src/components/OptionList/OptionsList.css
@@ -24,7 +24,7 @@
 .options-list li {
   margin-right: 10px;
   cursor: pointer;
-  color: rgb(9, 111, 170);
+  color: blue;
   font-size: 20px;
   font-weight: bold;
 
