--- a/front-end/lucienstore/src/components/CreateUser/CreateUser.css
+++ b/front-end/lucienstore/src/components/CreateUser/CreateUser.css
@@ -1,4 +1,4 @@
-.loginApp {
+.registerApp {
     font-family: sans-serif;
     display: flex;
     align-items: center;
@@ -10,53 +10,10 @@
     background-color: #DCDCDC;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"] {
-    height: 25px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-
-
-input[type="submit"] {
-    margin-top: 10px;
-    cursor: pointer;
-    font-size: 15px;
-    background: #01d28e;
-    border: 1px solid #01d28e;
-    color: #fff;
-    padding: 10px 20px;
-}
-
-input[type="submit"]:hover {
-    background: #6cf0c2;
-}
-
-.button-container {
-    display: flex;
-    justify-content: center;
-}
-
-.create-user-button {
-    margin-top: 15px;
-    display: flex;
-    justify-content: center;
-}
-
-.login-form {
+.register-form {
     background-color: white;
     padding: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.list-container {
-    display: flex;
-}
-
-.error {
-    color: red;
-    font-size: 12px;
 }
 
 .title {
@@ -66,19 +23,57 @@ input[type="submit"]:hover {
     margin-bottom: 20px;
 }
 
-
-.title-message {
-    display: flex;
-    justify-content: center;
-    font-size: 19px;
-    margin-bottom: 22px;
-    color: rgb(9, 111, 170);
-}
-
-
 .input-container {
     display: flex;
     flex-direction: column;
     gap: 8px;
     margin: 10px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="submit"],
+input[type="checkbox"] {
+    height: 25px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.checkbox-container {
+    margin-bottom: 15px;
+}
+
+.checkbox-container label {
+    display: flex;
+    align-items: center;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+button {
+    cursor: pointer;
+    font-size: 15px;
+    background: #01d28e;
+    border: 1px solid #01d28e;
+    color: #fff;
+    padding: 10px 20px;
+}
+
+button:hover {
+    background: #6cf0c2;
+}
+
+.login-link {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.login-link a {
+    color: blue;
 }
