--- a/front-end/lucienstore/src/components/Categories/styles.css
+++ b/front-end/lucienstore/src/components/Categories/styles.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     overflow: auto;
 }
+
 .dashboard-content-container {
     margin: 1em;
     background-color: white;
@@ -12,14 +13,16 @@
     padding: 1em;
     display: flex;
     flex-direction: column;
-    gap:25px;
+    gap: 25px;
     overflow: auto;
 }
+
 .dashboard-content-header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
+
 .dashboard-content-header h2 {
     margin-top: auto;
     margin-bottom: auto;
@@ -27,6 +30,7 @@
     font-size: xx-large;
     font-weight: 700;
 }
+
 .dashboard-content-search {
     font-weight: 400;
     line-height: 1.4em;
@@ -42,9 +46,11 @@
     border-radius: 0.375rem;
     border: 1px solid gray;
 }
+
 .dashboard-content-search:focus {
     outline: #2D83B5 auto 1px;
 }
+
 .dashboard-content-input {
     font-style: inherit;
     font-variant: inherit;
@@ -55,7 +61,7 @@
     letter-spacing: inherit;
     border: 0px;
     box-sizing: content-box;
-    background: none transparent;   
+    background: none transparent;
     margin: 0px;
     display: block;
     min-width: 0px;
@@ -64,10 +70,12 @@
     font-size: 0.75rem;
     padding: 0.625rem;
 }
+
 table {
     width: 100%;
     margin: auto;
 }
+
 th {
     text-align: left;
     padding: 12px 24px;
@@ -80,15 +88,19 @@ th {
     letter-spacing: 0.035em;
     border-bottom: 0.05rem solid rgb(240, 242, 245);
 }
+
 tbody {
     display: table-row-group;
 }
-tr, thead {
+
+tr,
+thead {
     color: inherit;
     display: table-row;
     vertical-align: middle;
     outline: 0px;
 }
+
 td {
     text-align: left;
     padding: 12px 24px;
@@ -96,17 +108,20 @@ td {
     box-shadow: none;
     border-bottom: 0.05rem solid rgb(240, 242, 245);
 }
+
 td div {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
 .dashboard-content-avatar {
     width: 40px;
     height: 40px;
     margin-right: 10px;
     border-radius: 20px;
 }
+
 td span {
     margin: 0px;
     font-size: 0.75rem;
@@ -119,15 +134,18 @@ td span {
     color: gray;
     font-weight: 700;
 }
+
 .dashboard-content-icon {
     width: 20px;
     margin-right: 10px;
 }
+
 .dashboard-content-footer {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
+
 .dashboard-content-footer .pagination {
     padding: 0.5rem;
     margin: 0.2rem;
@@ -135,6 +153,7 @@ td span {
     background-color: #F0F2F5;
     cursor: pointer;
 }
+
 .dashboard-content-footer .active-pagination {
     padding: 0.5rem;
     margin: 0.2rem;
@@ -143,6 +162,7 @@ td span {
     background-color: #2D83B5;
     cursor: pointer;
 }
+
 .empty-table {
     margin: 0px;
     font-size: 1rem;
